# fundingx

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  STRATEGY.md  backtest_results.json  backtest_v3_trades.json  fundingxnotes.md  pyproject.toml  requirements.txt  stepBC_timing_results.json  stepB_results_v3.json  stepD_analysis_output.txt
.github/: copilot-instructions.md
azure/: azure-pipelines.yml  deploy.sh
config/: default.yaml
scripts/: docker_build.sh  run_local.sh  step1_threshold.py  step2_parse_log.py  step2_scan.py  step3_book_test.py  stepA_check_api_caps.py  stepA_check_mcp.py  stepA_check_sizes.py  stepA_explore2.py  stepA_explore_cryptohftdata.py  stepA_inspect2.py  stepA_inspect_parquet.py  stepBC_timing_and_missing.py  stepB_book_at_settlement.py  stepB_book_at_settlement_v2.py  stepB_book_at_settlement_v3.py  stepB_debug_ts.py  stepB_debug_ts2.py  stepB_debug_ts3.py  stepB_qualifying_settlements.py  stepD_analysis.py  stepD_analysis_v2.py  stepD_backtest.py  stepD_backtest_full.py  stepD_backtest_v2.py  stepD_backtest_v3.py  stepD_contradiction.py  stepD_exit_comparison.py  stepD_exit_comparison_v2.py  stepD_exit_debug.py  stepD_kline_verify.py  stepD_leftover_scan.py  stepD_leftover_v2.py  stepD_signal_test.py
src/fundingx/: __init__.py  __main__.py  config.py  exchange.py  logging.py
tests/: test_config.py
